# CardGameClient

./: CMakeLists.txt
source/: CMakeLists.txt  client.cpp  crazyEightsScreen.cpp  imagePanel.cpp
